test/conformance/chainsaw/exceptions/multiple-exceptions-with-pod-security/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-baseline
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
