test/conformance/chainsaw/exceptions/multiple-exceptions-with-pod-security/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: multiple-exceptions-with-pod-security
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: psp-baseline
  - name: step-02
    try:
    - apply:
        file: exceptions.yaml
  - name: step-03
    try:
    - apply:
        file: pod.yaml
